# python-appstore-analytics-api

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
data/sample/: input.grouped.json
src/surquest/utils/appstoreconnect/analytics/: __init__.py  analytics.py  client.py  enums.py  exceptions.py  formatter.py  reviews.py
test/: pytest.ini  requirements.txt
test/analytics/: test_analytics.py  test_client.py  test_formatter.py  test_reviews.py
