[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surquest-utils-appstoreconnect-analytics-api"
version = "0.0.1rc2"
description = "Client library for AppStore Connect Analytics API "
authors = [
    {name= "Michal Švarc", email= "michal.svarc@surquest.com"}
]
readme = "README.md"
dependencies = [
    "requests>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]


[project.urls]
"Homepage" = "https://github.com/surquest/python-appstore-analytics-api"
"Bug Tracker" = "https://github.com/surquest/python-appstore-analytics-api/issues"

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"scripts" = "surquest"

[tool.hatch.build.targets.sdist.sources]
"src" = ""
"scripts" = "surquest"
